--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,10 @@
 body {
+  background: linear-gradient(90deg, #a5c8d1, #88e0d3);
+  background-size: cover;
   font-family: Georgia;
   font-size: 16px;
 }
+
 
 .welcome-container {
   height: 260px;
@@ -45,4 +48,8 @@ h1.panel {
   border-top: 2px dotted #484f47;
   margin-top: 10px;
   padding-top: 10px;
+}
+
+a img:hover {
+  box-shadow: 5px 5px black;
 }
