--- a/css/styles.css
+++ b/css/styles.css
@@ -3,13 +3,10 @@ body {
   font-size: 16px;
 }
 
-
-
 body.index {
   background: linear-gradient(90deg, #a5c8d1, #88e0d3);
   background-size: cover;
 }
-
 
 .welcome-container {
   height: 260px;
@@ -17,6 +14,10 @@ body.index {
 
 .contain-image {
   width: 100%;
+}
+
+.center-align {
+  text-align: center;
 }
 
 h1.panel {
@@ -73,12 +74,27 @@ a img:hover {
   text-shadow: 1px 1px gray;
 }
 
+.simple-list {
+  list-style: none;
+}
+
+.resume-info {
+  margin-left: 20px;
+  margin-right: 20px;
+}
+
+.resume-info ul li {
+  padding-bottom: 5px;
+}
+
 ol li {
   margin-left: 35px;
-  padding: 2px;
+  padding: 3px;
 }
 
 .back-button {
+  width: 100%
   padding: 10px;
   font-size: 25px;
+  text-align: center;
 }
