--- a/css/styles.css
+++ b/css/styles.css
@@ -12,10 +12,6 @@ body.index {
   height: 260px;
 }
 
-.contain-image {
-  width: 100%;
-}
-
 .center-align {
   text-align: center;
 }
@@ -36,14 +32,11 @@ h1.panel {
 .img-sculpt {
   border-radius: 10% 25%;
   padding: 5px;
+  width: 100%;
 }
 
 .proj-img-container {
-  height: 240px;
-}
-
-.proj-img-container img {
-  height: 230px;
+  margin: 10px;
 }
 
 .proj-row {
@@ -87,7 +80,7 @@ a img:hover {
   padding-bottom: 5px;
 }
 
-ol li {
+ol li, .indent {
   margin-left: 35px;
   padding: 3px;
 }
